# IMR_writer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
IMR_writer/: IMR_struct.h  IMR_writer.cc  IMR_writer.h
example/: input.txt  main.cc
